force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/agf__ADM_Feature_Freeze_Exception_Request__c.object-meta.xml
<CustomObject>
    <description>Feature Freeze exception request for incomplete features.</description>
    <label>Feature Freeze Exception Request</label>
    <nameField>
        <displayFormat>FFD-{0000}</displayFormat>
        <label>Feature Freeze Exception Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Freeze Exception Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>