force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Code_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Code_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Code checked in and follows department standards.</description>
    <inlineHelpText>Code checked in and follows department standards.</inlineHelpText>
    <label>Code Complete</label>
    <type>Checkbox</type>
</CustomField>