force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Code_Coverage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>agf__Code_Coverage_Percentage__c</fullName>
    <description>Code coverage for this feature.</description>
    <inlineHelpText>Code coverage for this feature.</inlineHelpText>
    <label>Code Coverage Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>