force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__DB_Upgrade_Script_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__DB_Upgrade_Script_Complete__c</fullName>
    <inlineHelpText>Database scripts are complete and incorporated into database upgrade process.</inlineHelpText>
    <label>DB Upgrade Scripts Complete and Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>