force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__delete_me__c.field-meta.xml
<CustomField>
    <fullName>agf__delete_me__c</fullName>
    <label>delete me</label>
    <length>1</length>
    <type>Text</type>
</CustomField>