force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Effort_to_Disable_Feature__c.field-meta.xml
<CustomField>
    <fullName>agf__Effort_to_Disable_Feature__c</fullName>
    <description>What effort is required to backout/disable the functionality and ensure the code line is potentially releasable?</description>
    <inlineHelpText>What effort is required to backout/disable the functionality and ensure the code line is potentially releasable?</inlineHelpText>
    <label>Effort to Disable Feature</label>
    <type>TextArea</type>
</CustomField>