force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Exception_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Exception_Complete__c</fullName>
    <description>The date the scrum team marked the exception as complete.</description>
    <inlineHelpText>The date the scrum team marked the exception as complete.</inlineHelpText>
    <label>Exception Complete</label>
    <type>Date</type>
</CustomField>