force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__External_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>