force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Feature_Freeze_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Feature_Freeze_Status__c</fullName>
    <label>Feature Freeze Status</label>
    <referenceTo>agf__ADM_Feature_Freeze_Status__c</referenceTo>
    <relationshipName>R00NT0000000txXxMAI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>