force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__List_of_Showstopper_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__List_of_Showstopper_Bugs__c</fullName>
    <description>List SHOWSTOPPER bugs and when they will be fixed and tested.</description>
    <inlineHelpText>List SHOWSTOPPER bugs and when they will be fixed and tested.</inlineHelpText>
    <label>List of Showstopper Bugs</label>
    <type>TextArea</type>
</CustomField>