force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Localization_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Localization_Complete__c</fullName>
    <description>All UI labels ready for localization vendors.</description>
    <inlineHelpText>All UI labels ready for localization vendors.</inlineHelpText>
    <label>UI Labels Ready for Localization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>