force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Major_Exception__c.field-meta.xml
<CustomField>
    <fullName>agf__Major_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Exception</label>
    <type>Checkbox</type>
</CustomField>