force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Num_of_P1_Bugs_TF_to_be_Fixed_Verified__c.field-meta.xml
<CustomField>
    <fullName>agf__Num_of_P1_Bugs_TF_to_be_Fixed_Verified__c</fullName>
    <inlineHelpText>Number of P1 bugs and test failures to be fixed or verified.  DoD criterion is 0.  FF criterion is no more than 1.</inlineHelpText>
    <label>Num of Bugs/TF to Fix</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>