force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Number_of_Blocking_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Blocking_Bugs__c</fullName>
    <description>Number of BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs that are not Verified and Closed.</description>
    <inlineHelpText>Number of BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs that are not Verified and Closed.</inlineHelpText>
    <label>Number of P0/Blocking Bugs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>