force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Number_of_Open_Regressions__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Open_Regressions__c</fullName>
    <description>Number of open regressions for this feature. Automated tests written and reviewed for all closed regressions.</description>
    <inlineHelpText>Number of open regressions for this feature. Automated tests written and reviewed for all closed regressions.  DoD criterion is 0.</inlineHelpText>
    <label>Number of Open Regressions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>