force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Plan_if_Exception_Denied__c.field-meta.xml
<CustomField>
    <fullName>agf__Plan_if_Exception_Denied__c</fullName>
    <description>What are the options if this exception request is not approved?</description>
    <inlineHelpText>What are the options if this exception request is not approved?</inlineHelpText>
    <label>Plan if Exception Denied</label>
    <type>TextArea</type>
</CustomField>