force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Product_Metrics_Defined__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Metrics_Defined__c</fullName>
    <description>Metrics to concretely measure customer usage of the sprint functionality have been defined and New Metric Request has been filed for any metrics not yet in the data warehouse.</description>
    <inlineHelpText>Metrics to concretely measure customer usage of the sprint functionality have been defined and New Metric Request has been filed for any metrics not yet in the data warehouse.  See  http://wikiforce.soma.salesforce.com/pmwiki.php/Main/ProductMetrics</inlineHelpText>
    <label>Product Metrics Defined</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>