force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__R_D_Exec_Approved__c.field-meta.xml
<CustomField>
    <fullName>agf__R_D_Exec_Approved__c</fullName>
    <description>The date the R&amp;D Exec Team signed off on Feature Freeze.</description>
    <inlineHelpText>The date the R&amp;D Exec Team signed off on Feature Freeze.</inlineHelpText>
    <label>R&amp;D Exec Approved</label>
    <type>Date</type>
</CustomField>