force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Remaining_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Remaining_Work__c</fullName>
    <description>What remains to meet Feature Freeze criteria?</description>
    <inlineHelpText>What remains to meet Feature Freeze criteria?</inlineHelpText>
    <label>Remaining Work</label>
    <type>TextArea</type>
</CustomField>