force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/fields/agf__Test_Cases_Passing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Cases_Passing_Percentage__c</fullName>
    <description>Percent of test cases passing.</description>
    <inlineHelpText>Percent of test cases passing.  DoD criterion is 100% for P1/P2 cases.</inlineHelpText>
    <label>Test Cases Passing Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>