force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Exception_Request__c/validationRules/agf__Code_Coverage_Percentage_0_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Code_Coverage_Percentage_0_to_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    agf__Code_Coverage_Percentage__c &gt; 1.0,
    agf__Code_Coverage_Percentage__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>agf__Code_Coverage_Percentage__c</errorDisplayField>
    <errorMessage>Percentage must be between 0 and 100</errorMessage>
</ValidationRule>